force-app/main/default/objects/GPS_Insight_Config__c/GPS_Insight_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores GPS Insight (WEX Fleet Intelligence) API credentials and cached session token. Admin sets Username__c and App_Token__c once via Setup → Custom Settings. Apex writes Session_Token__c and Token_Expiry__c automatically.</description>
    <label>GPS Insight Config</label>
</CustomObject>