force-app/main/default/objects/GPS_Insight_Config__c/fields/App_Token__c.field-meta.xml
<CustomField>
    <fullName>App_Token__c</fullName>
    <description>GPS Insight non-expiring app token. Obtain from GPS Insight portal: Account → Manage Users → Third-party access to API V2. Set once by admin — never needs to change.</description>
    <label>App Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>