force-app/main/default/objects/GPS_Insight_Config__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <description>Auto-managed by WexGpsSyncService. Do not edit manually. Holds the live GPS Insight session token obtained from userauth/login.</description>
    <label>Session Token (Cached)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>