force-app/main/default/objects/GPS_Insight_Config__c/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <description>Auto-managed by WexGpsSyncService. Timestamp after which the cached session token should be refreshed.</description>
    <label>Token Expiry</label>
    <type>DateTime</type>
</CustomField>