force-app/main/default/objects/GPS_Insight_Config__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>GPS Insight login username. Set once by admin via Setup → Custom Settings → GPS Insight Config → Manage.</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>